changed desing
